Few changes. Added overflow-x to shoppingList page to handle issue where table would produce a horizontal scroll even though it shouldn't be

--- a/GroSharies/client/src/styles/shoppingList.css
+++ b/GroSharies/client/src/styles/shoppingList.css
@@ -1,6 +1,6 @@
 .overflow {
 	overflow-y: auto;
-	overflow-x: auto;
+	overflow-x: hidden;
 	max-height: 500px;
 	margin-bottom: 15px;
 }
